:bug: - fix:  fix paginator page nunber buttons being unexpectadly visiible on mobile viewport

--- a/src/components/data/paginator/paginator.scss
+++ b/src/components/data/paginator/paginator.scss
@@ -64,7 +64,7 @@
 
     &__ellipsis,
     &__button--page {
-      display: none;
+      display: none !important;
     }
   }
 }
